fix: bit of a hacky fix for splide autoheight on mobile

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -137,4 +137,8 @@
   .splide__arrow--prev svg {
     @apply rotate-180;
   }
+
+  .splide__slide:not(.is-active) {
+    @apply h-0 lg:h-auto;
+  }
 }
